# BiVision

./: CMakeLists.txt  FrameWithProcessEvent.hs  LICENSE  Main.hs  MainFrame.cpp  MainFrame.h  Makefile  Makefile.win  Messages.hs  README.md  TechnicalUtils.hs  frameWithProcessEvent.cpp  frameWithProcessEvent.h  main.cpp  setupScript.iss
gui_builder/: gui.fbp  gui_builder.cpp  gui_builder.h
